packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__const _x = 1let x  = ((1 - 1)) * ((_x)).snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x = alloca double, align 8
  store double 1.000000e+00, double* %_x, align 8
  %x = alloca double, align 8
  %"5" = load double, double* %_x, align 8
  %"1" = fmul double 0.000000e+00, %"5"
  store double %"1", double* %x, align 8
  ret void
}

